feat(cache): implement delete cache when create new news
